[project]
name = "roman-converter"
version = "0.1.0"
description = "A CLI tool to convert between Roman and Arabic numerals"
authors = [{ name = "Ad Snijders" }]
readme = "README.md"    
requires-python = ">=3.7"
dependencies = [
    "typer[all]",
    "numpy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
roman = "roman_converter.cli:app"